# continual-learning-benchmark

./: .gitignore  LICENSE  README.md  SUMMARY.md  claude_code_instructions.md  pyproject.toml
continual_benchmark/: __init__.py  cli.py
continual_benchmark/baselines/replay_buffer/: buffer.py  runner.py
continual_benchmark/baselines/sequential_ft/: runner.py
continual_benchmark/baselines/synthetic_rehearsal/: runner.py
continual_benchmark/core/: __init__.py  constants.py  hashing.py  io.py  manifests.py  registry.py  rng.py  schemas.py
continual_benchmark/eval/: __init__.py  matrix.py  metrics.py  reporting.py  score.py
continual_benchmark/streams/: __init__.py  builder.py  loader.py  similarity.py
continual_benchmark/streams/definitions/: v1_clustered.yaml  v1_drift.yaml  v1_interleaved.yaml
continual_benchmark/tasks/: __init__.py  families.py
continual_benchmark/tasks/api_code/: generator.py  sandbox.py  test_builder.py  verifier.py
continual_benchmark/tasks/dsl_exec/: canonicalize.py  generator.py  interpreter.py  verifier.py
continual_benchmark/tasks/sql_reasoning/: canonicalize.py  db_builder.py  generator.py  verifier.py
continual_benchmark/utils/: logging.py  paths.py  text.py
docs/: adding_new_task_family.md  benchmark_overview.md  metrics.md  protocol.md  task_families.md
examples/: build_v1.sh  evaluate_dummy_model.sh
tests/: test_api_code.py  test_build.py  test_dsl_exec.py  test_metrics.py  test_rng.py  test_schemas.py  test_sql_reasoning.py  test_streams.py  test_transform.py
(+3 files in other folders)
